# oma

./: Cargo.toml
oma-console/src/: print.rs
oma-contents/src/: searcher.rs
oma-mirror/: Cargo.toml
oma-mirror/src/: lib.rs
oma-pm/src/: apt.rs
src/: args.rs  error.rs  main.rs
src/subcommand/: mirror.rs  mod.rs
