[package]
name = "oma-mirror"
version = "0.1.0"
edition = "2021"
description = "Handle AOSC APT sources.list mirror setting library"
license = "MIT"

[dependencies]
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.8.5"
indexmap = { version = "2.6", features = ["serde"] }
ahash = "0.8.11"
tracing = "0.1"
once_cell = "1.19"
